--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,7 +4,7 @@ beautifulsoup4==4.12.2
 requests==2.31.0
 lxml==5.1.0
 python-dateutil==2.8.2
-pydantic==2.5.3
+pydantic>=2.10.0
 
 # Database
 sqlalchemy>=2.0.0
